09/10 - Public: Display multiselect combobox with keyword filter